# hls-eval

./: .clang-format  .gitignore  Makefile  README.md  gen_c2hlsc_descriptions.sh  gen_chstone_descriptions.sh  gen_chstone_testbench.sh  gen_machsuite_testbench.sh  gen_polybench_descriptions.sh  gen_rosetta_descriptions.sh  gen_testbench.sh  pyproject.toml
design_gen_scripts/: gen_chstone_descriptions.sh  gen_chstone_hierarchy.sh  gen_description.sh  gen_description_and_testbench.sh  gen_flowgnn_descriptions.sh  gen_gnnbuilder_descriptions.sh  gen_machsuite_descriptions.sh  gen_pp4fpga_descriptions.sh  gen_rosetta_testbench.sh
hls_eval/: agent_trace_render.py  data.py  eval.py  eval_agent.py  llm.py  llms.py  meta_hls_bench_builder_tool.py  prompting.py  prompts.py  rate_limit.py  tools.py  utils.py  vhls_report.py
hls_eval/swe_mini_agent_configs/: main.yaml
hls_eval_data/chstone/: 2025-03-06_08-12-46_count_duplicates.txt
hls_eval_experiments/: .gitignore  exp_utils.py
hls_eval_experiments/bench_stats/: compute_stats.py  one_off_analysis.py
hls_eval_experiments/hls_edit_zero_shot__dataflow/: analyze.py  exp.py
hls_eval_experiments/hls_edit_zero_shot__fpx/: analyze.py  exp.py
hls_eval_experiments/hls_edit_zero_shot__label/: analyze.py  exp.py
hls_eval_experiments/hls_edit_zero_shot__loop_tile/: analyze.py  exp.py
hls_eval_experiments/hls_gen_agent/: analyze.py  analyze_agent_traces.py  exp.py
hls_eval_experiments/hls_gen_zero_shot/: exp.py
hls_eval_experiments/hls_gen_zero_shot__exec_timeline/: analyze.py  exp.py
hls_eval_experiments/hls_gen_zero_shot__main/: analyze.py  exp.py
hls_eval_experiments/hls_gen_zero_shot__many_models/: analyze.py  exp.py
hls_eval_experiments/hls_inference_scaling/: analyze.py  exp.py
hls_eval_experiments/test_openrouter/: analyze.py  analyze_timeline.py  exp.py
leaderboard/: app.js  index.html  styles.css
tests/: test_cases.py  test_llms.py  test_prompting.py  test_rate_limit.py
(+733 files in other folders)
