[project]
name = "hls-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "joblib>=1.4.2",
    "llm-together>=0.4",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "vllm>=0.7.2",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.4", "pytest-xdist>=3.6.1", "ruff>=0.9.6"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
